// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SideItem render as dependency 1`] = `

<div>
  <div class="group relative z-10">
    <gui-card classname="transition-colors relative my-4   group-hover:light:border-indigo-600 group-hover:light:bg-indigo-100  dark:group-hover:bg-gradient-to-b dark:group-hover:from-indigo-950 dark:group-hover:to-zinc-950 dark:group-hover:border-indigo-300">
      <gui-card-header classname="rounded-t-lg relative flex flex-row p-2 px-3">
        <gui-card-title classname="text-md grow">
          item
        </gui-card-title>
        <div>
          <gui-badge classname="mx-1 grow-0 border-transparent bg-lime-100 text-neutral-900 hover:bg-lime-100/80">
            peer
          </gui-badge>
        </div>
      </gui-card-header>
    </gui-card>
    <div class="absolute border-b border-l border-solid border-gray-300 dark:border-gray-700 rounded-bl-sm z-0 w-[9px] h-16 -left-[9px] bottom-5">
    </div>
  </div>
</div>

`;

exports[`SideItem render as dependency with long name 1`] = `

<div>
  <div class="group relative z-10">
    <gui-card classname="transition-colors relative my-4   group-hover:light:border-indigo-600 group-hover:light:bg-indigo-100  dark:group-hover:bg-gradient-to-b dark:group-hover:from-indigo-950 dark:group-hover:to-zinc-950 dark:group-hover:border-indigo-300">
      <gui-card-header classname="rounded-t-lg relative flex flex-row p-2 px-3">
        <gui-card-title classname="text-md grow">
          lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit-sed-do-eiusmod-tempor-incididunt-ut-labore-et-dolore-magna-aliqua-ut-enim-ad-minim-veniam-quis-nostrud-exercitation
        </gui-card-title>
        <div>
          <gui-badge classname="mx-1 grow-0 border-transparent bg-lime-100 text-neutral-900 hover:bg-lime-100/80">
            peer
          </gui-badge>
        </div>
      </gui-card-header>
    </gui-card>
    <div class="absolute border-b border-l border-solid border-gray-300 dark:border-gray-700 rounded-bl-sm z-0 w-[9px] h-16 -left-[9px] bottom-5">
    </div>
  </div>
</div>

`;

exports[`SideItem render as dependent 1`] = `

<div>
  <div class="group relative z-10">
    <gui-card classname="transition-colors relative my-4   group-hover:light:border-indigo-600 group-hover:light:bg-indigo-100  dark:group-hover:bg-gradient-to-b dark:group-hover:from-indigo-950 dark:group-hover:to-zinc-950 dark:group-hover:border-indigo-300">
      <gui-card-header classname="rounded-t-lg relative flex flex-row p-2 px-3">
        <gui-card-title classname="text-md grow">
          item
        </gui-card-title>
        <div>
          <gui-badge classname="mx-1 grow-0 border-transparent bg-cyan-100 text-neutral-900 hover:bg-cyan-100/80">
            prod
          </gui-badge>
        </div>
      </gui-card-header>
    </gui-card>
    <div class="absolute border-b border-r border-solid border-gray-300 dark:border-gray-700 rounded-br-sm z-0 w-[9px] h-16 -right-[9px] bottom-5">
    </div>
  </div>
</div>

`;

exports[`SideItem render as multi-stacked dependent 1`] = `

<div>
  <div class="group relative z-10">
    <div class="absolute border top-2 left-2 w-[96%] h-full bg-card rounded-lg group-hover:light:border-indigo-600 group-hover:light:bg-indigo-100 dark:group-hover:bg-gradient-to-b dark:group-hoverfrom-indigo-950 dark:group-hoverto-zinc-950 dark:group-hover:border-indigo-300">
    </div>
    <div class="absolute border top-1 left-1 w-[98%] h-full bg-card rounded-lg group-hover:light:border-indigo-600 group-hover:light:bg-indigo-100 dark:group-hover:bg-gradient-to-b dark:group-hover:from-indigo-950 dark:group-hover:to-zinc-950 dark:group-hover:border-indigo-300">
    </div>
    <gui-card classname="transition-colors relative my-4   group-hover:light:border-indigo-600 group-hover:light:bg-indigo-100  dark:group-hover:bg-gradient-to-b dark:group-hover:from-indigo-950 dark:group-hover:to-zinc-950 dark:group-hover:border-indigo-300">
      <gui-card-header classname="rounded-t-lg relative flex flex-row p-2 px-3">
        <gui-card-title classname="text-md grow">
          item
        </gui-card-title>
        <div>
          <gui-badge classname="mx-1 grow-0 border-transparent bg-cyan-100 text-neutral-900 hover:bg-cyan-100/80">
            prod
          </gui-badge>
        </div>
      </gui-card-header>
    </gui-card>
    <div class="absolute border-b border-r border-solid border-gray-300 dark:border-gray-700 rounded-br-sm z-0 w-[9px] h-16 -right-[9px] bottom-5">
    </div>
  </div>
</div>

`;

exports[`SideItem render as parent 1`] = `

<div>
  <div class="group relative z-10">
    <gui-card classname="transition-colors relative my-4 border-primary  group-hover:light:border-indigo-600 group-hover:light:bg-indigo-100  dark:group-hover:bg-gradient-to-b dark:group-hover:from-indigo-950 dark:group-hover:to-zinc-950 dark:group-hover:border-indigo-300">
      <gui-card-header classname="rounded-t-lg relative flex flex-row p-2 px-3">
        <gui-card-title classname="text-md grow">
          item
        </gui-card-title>
        <div>
          <gui-badge classname="mx-1 grow-0 border-transparent bg-cyan-100 text-neutral-900 hover:bg-cyan-100/80">
            prod
          </gui-badge>
        </div>
      </gui-card-header>
    </gui-card>
    <div class="absolute border-t border-solid border-primary w-4 -right-4 top-5">
    </div>
  </div>
</div>

`;

exports[`SideItem render as two-stacked dependent 1`] = `

<div>
  <div class="group relative z-10">
    <div class="absolute border top-1 left-1 w-[98%] h-full bg-card rounded-lg group-hover:light:border-indigo-600 group-hover:light:bg-indigo-100 dark:group-hover:bg-gradient-to-b dark:group-hover:from-indigo-950 dark:group-hover:to-zinc-950 dark:group-hover:border-indigo-300">
    </div>
    <gui-card classname="transition-colors relative my-4   group-hover:light:border-indigo-600 group-hover:light:bg-indigo-100  dark:group-hover:bg-gradient-to-b dark:group-hover:from-indigo-950 dark:group-hover:to-zinc-950 dark:group-hover:border-indigo-300">
      <gui-card-header classname="rounded-t-lg relative flex flex-row p-2 px-3">
        <gui-card-title classname="text-md grow">
          item
        </gui-card-title>
        <div>
          <gui-badge classname="mx-1 grow-0 border-transparent bg-cyan-100 text-neutral-900 hover:bg-cyan-100/80">
            prod
          </gui-badge>
        </div>
      </gui-card-header>
    </gui-card>
    <div class="absolute border-b border-r border-solid border-gray-300 dark:border-gray-700 rounded-br-sm z-0 w-[9px] h-16 -right-[9px] bottom-5">
    </div>
  </div>
</div>

`;
